; ModuleID = '/home/carl/AnghaBench/h2o/deps/neverbleed/extr_neverbleed.c_get_privsep_data.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/neverbleed/extr_neverbleed.c_get_privsep_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_neverbleed_rsa_exdata_t = type { i32 }
%struct.st_neverbleed_thread_data_t = type { i32 }

@errno = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [21 x i8] c"invalid internal ref\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.st_neverbleed_rsa_exdata_t**, %struct.st_neverbleed_thread_data_t**)* @get_privsep_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_privsep_data(i32* %0, %struct.st_neverbleed_rsa_exdata_t** %1, %struct.st_neverbleed_thread_data_t** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.st_neverbleed_rsa_exdata_t**, align 8
  %6 = alloca %struct.st_neverbleed_thread_data_t**, align 8
  store i32* %0, i32** %4, align 8
  store %struct.st_neverbleed_rsa_exdata_t** %1, %struct.st_neverbleed_rsa_exdata_t*** %5, align 8
  store %struct.st_neverbleed_thread_data_t** %2, %struct.st_neverbleed_thread_data_t*** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call %struct.st_neverbleed_rsa_exdata_t* @RSA_get_ex_data(i32* %7, i32 0)
  %9 = load %struct.st_neverbleed_rsa_exdata_t**, %struct.st_neverbleed_rsa_exdata_t*** %5, align 8
  store %struct.st_neverbleed_rsa_exdata_t* %8, %struct.st_neverbleed_rsa_exdata_t** %9, align 8
  %10 = load %struct.st_neverbleed_rsa_exdata_t**, %struct.st_neverbleed_rsa_exdata_t*** %5, align 8
  %11 = load %struct.st_neverbleed_rsa_exdata_t*, %struct.st_neverbleed_rsa_exdata_t** %10, align 8
  %12 = icmp eq %struct.st_neverbleed_rsa_exdata_t* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  store i64 0, i64* @errno, align 8
  %14 = call i32 @dief(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  br label %15

15:                                               ; preds = %13, %3
  %16 = load %struct.st_neverbleed_rsa_exdata_t**, %struct.st_neverbleed_rsa_exdata_t*** %5, align 8
  %17 = load %struct.st_neverbleed_rsa_exdata_t*, %struct.st_neverbleed_rsa_exdata_t** %16, align 8
  %18 = getelementptr inbounds %struct.st_neverbleed_rsa_exdata_t, %struct.st_neverbleed_rsa_exdata_t* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call %struct.st_neverbleed_thread_data_t* @get_thread_data(i32 %19)
  %21 = load %struct.st_neverbleed_thread_data_t**, %struct.st_neverbleed_thread_data_t*** %6, align 8
  store %struct.st_neverbleed_thread_data_t* %20, %struct.st_neverbleed_thread_data_t** %21, align 8
  ret void
}

declare dso_local %struct.st_neverbleed_rsa_exdata_t* @RSA_get_ex_data(i32*, i32) #1

declare dso_local i32 @dief(i8*) #1

declare dso_local %struct.st_neverbleed_thread_data_t* @get_thread_data(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
